--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="%PUBLIC_URL%/script.js"></script>
+  <script src="/static/script.js"></script>
 </body>
 </html>
